# horloge_a_mots

./: .gitlab-ci.yml  Notes_STM32f410_LED_blink_in_rust.md  README.md  calcul-volume-resine.xlsx  conf-cleaver.html  package-lock.json  package.json  software.md
doc/: cablage-gil.ods  cablage.ods  clock.html  horloge.xlsx  les mots.odt
doc/dtd2022/: conf-cleaver.html  conf.md  readme.md
doc/dtd2022/orange-theme/: style.css
presentation/: index.html  package-lock.json  sommaire.txt  timer.txt
presentation/css/: reveal.css
software/: Notes_STM32f410_LED_blink_in_rust.md  README.md
software/blink/: Cargo.toml  README.md
software/blink/src/: main.rs
software/blink_avr/: Cargo.toml  Makefile
software/blink_avr/.cargo/: config.toml
software/blink_avr/cpp/: blink.ino  blink.ino_atmega8_8000000L.hex
software/blink_avr/src/: main.rs
software/blink_stm32/src/: main.rs
software/horloge/: .gitignore  Cargo.toml  Makefile  README.md  README_AVR.md  avr-atmega328p.json  avr-atmega8.json  big_panel.rs  build.rs  demo_panel.rs  horloge_big_60s.elf  mini_panel.rs
software/horloge/.cargo/: config  config.toml
software/horloge/src/: board.rs  data.rs  lib.rs  main.rs  multiplexer.rs
software/ldr_time/: ldr_time.ino
usinage/: horloge.xlsx  readme.md
