[package]
name = "blink_avr"
version = "0.1.0"
edition = "2021"

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
panic-halt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
features = ["arduino-nano"]


[profile.release]
panic = "abort"
lto = true
opt-level = "s"
