[package]
name = "blink_avr"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
panic-halt = "0.2.0"
embedded-hal = "0.2"

[dependencies.atmega-hal]
git = "https://github.com/Rahix/avr-hal"
features = ["atmega48p"]
