[package]
name = "horloge"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"

[dependencies]
panic-halt = "0.2"

[dependencies.avr-device]
version = "0.4.0"
features = ["atmega8","rt"]

[features]
default = ["big_panel", "reverse_led", "first_test_animation"]
big_panel=[]
mini_panel=[]
mini_demo=[]
gil_panel=[]
reverse_led=[]
normal_led=[]
first_test_animation=[]