[package]
name = "horloge"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"

[dependencies]
panic-halt = "0.2"

[dependencies.avr-device]
version = "0.4.0"
features = ["atmega8","rt"]

[features]
default = ["big_panel", "reverse_led"]
# all the different panels
big_panel=[]        
mini_panel=[]
mini_demo=[]
gil_panel=[]
# Leds modes
reverse_led=[]
normal_led=[]
# Test animation at the starting
first_test_animation=[]
# Fading or no_fading during transitions
no_fading=[]