[package]
name = "horloge"
version = "0.1.0"
edition = "2021"
build="build/build.rs"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"

[dependencies]
panic-halt = "0.2"

[dependencies.avr-device]
version = "0.4.0"
features = ["atmega8","rt"]

[features]
default = ["big_panel","first_test_animation"]
# all the different panels
big_panel=[]
mini_panel=[]
mini_demo=[]
gil_panel=[]
panel_xfm=[]
# Leds modes
reverse_led=[]
# Test animation at the starting
first_test_animation=[]
# Fading or no_fading during transitions
no_fading=[]
